--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fal fa-triangle"></i>
+          <i class="fa-light fa-triangle"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
