--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="container d-flex align-items-center flex-column">
 
       <!-- Masthead Avatar Image -->
-      <img src="pictures/cartoon_circle_pic.svg" width='1000' height='500' alt="">
+      <img src="pictures/profile.jpg" width='1000' height='500' alt="">
 
       <!-- Masthead Heading -->
       <h1 class="masthead-heading text-uppercase mb-0">Analysis with Andrea</h1>
