--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <link rel="shortcut icon" type="image/png" href="pictures/avatar%20favicon.png"/>
 
   <!-- Theme CSS -->
-  <link href="css/freelancer.min.css" rel="stylesheet">
+  <link href="css/freelancer.css" rel="stylesheet">
 
 </head>
 
