--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <div class="container">
 
       <!-- Contact Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me<img src="pictures/down_final.svg" width='280' height='200' alt=""></h2>
+      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me<img src="pictures/contact.png" width='200' height='200' alt=""></h2>
 
       <!-- Icon Divider<div class="divider-custom"></div> -->
       
@@ -215,7 +215,7 @@
             <div class="p-2"> </div>
             <div class="lead">andrea.b1244@gmail.com</div>
             <div class="p-2"> </div>
-            <div class="lead"><a href="https://thomastale.github.io/TL_RESUME.pdf"target="_blank"> My Resume</a></div>
+            <div class="lead"><a href="https://analysiswithandrea.github.io/RESUME.pdf"target="_blank"> My Resume</a></div>
         </div>
         </div>
         <!-- Contact Section Form END -->  
