--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="container d-flex align-items-center flex-column">
 
       <!-- Masthead Avatar Image -->
-      <img src="pictures/profile_edit.png" width='400' height='400' alt="">
+      <img src="pictures/profile.png" width='400' height='400' alt="">
 
       <!-- Masthead Heading -->
       <h1 class="masthead-heading text-uppercase mb-0">Analysis with Andrea</h1>
