--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <div class="container">
 
       <!-- About Section Heading -->
-      <h2 img src="pictures/me_final.svg" width='300' height='200' alt=""<class="page-section-heading text-center text-uppercase text-white">About Me></h2>
+      <h2 class="page-section-heading text-center text-uppercase text-white">About Me<img src="pictures/me_final.svg" width='300' height='200' alt=""></h2>
         
 
       <!-- Icon Divider<div class="divider-custom"></div> -->
