--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i style="font-size:24px" class="fa">&#xf1fe;></i>
+          <i style="font-size:24px" class="fa">&#xf1fe;</i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
