--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="pictures/wuxiaworld.png" alt="">
+            <img class="img-fluid" src="pictures/stackoverflow.png" alt="">
           </div>
         </div>
 
