--- a/index.html
+++ b/index.html
@@ -467,8 +467,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <iframe width="100%" height="100%" frameborder="0" src="https://dataplatform.cloud.ibm.com/dashboards/299374d0-b380-43c9-b1f4-65d43e60e0c3/view/731cf70b1d822ce01fdeeee407cc2b022e3f275bb6bb810580d67b495e687497a86010c3c87d425ede165666a5ea165ecc"></iframe>
-                <!img class="img-fluid rounded mb-5" src="pictures/survey_graphs.jpg" alt="">
+                <img class="img-fluid rounded mb-5" src="pictures/surveygraphs.pdf" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">I scraped data from Wuxiaworld.com (an online novel hosting site) of chapters, publication dates, and user comments for several novels to do a meta-analysis on user engagement. <br><br> This concluded in finding a lower rate of user engagement when multiple chapters were released in a short period of time.<br><br> Further conclusions and the Jupyter Notebook for this project can be found <a href="https://github.com/thomastale/novel-comment-analysis"target="_blank">here</a>.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
