--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="pictures/surveygraphs.pdf" alt="">
+                <img class="img-fluid rounded mb-5" src="pictures/surveygraphs.png" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">I scraped data from Wuxiaworld.com (an online novel hosting site) of chapters, publication dates, and user comments for several novels to do a meta-analysis on user engagement. <br><br> This concluded in finding a lower rate of user engagement when multiple chapters were released in a short period of time.<br><br> Further conclusions and the Jupyter Notebook for this project can be found <a href="https://github.com/thomastale/novel-comment-analysis"target="_blank">here</a>.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
