--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">2019 Stack Overflow Developver Survey Analysis</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Stack Overflow Survey Analysis</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
