--- a/index.html
+++ b/index.html
@@ -462,14 +462,14 @@
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
                   <div class="divider-custom-icon">
-                    <i class="fas fa-book"></i>
+                    <i class="fa fa-user-circle"></i>
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="pictures/surveygraph.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">I scraped data from Wuxiaworld.com (an online novel hosting site) of chapters, publication dates, and user comments for several novels to do a meta-analysis on user engagement. <br><br> This concluded in finding a lower rate of user engagement when multiple chapters were released in a short period of time.<br><br> Further conclusions and the Jupyter Notebook for this project can be found <a href="https://github.com/thomastale/novel-comment-analysis"target="_blank">here</a>.</p>
+                <p class="mb-5"> I downloaded data from Stack Overflow's website and selected a randomised subset of about 10% of the original data. Then, I went through the data exploration, cleaning, and visualization process. <br><br> In my analysis, I found that techies need to be constantly learning to stay competitive in this ever changing industry. Nonrelational databases such as MongoDB are becoming increasingly popular and open-source databases are the most used. The tech industry is mostly comprised of males in their 20s living in the United States.<br><br> Further conclusions and the Jupyter Notebooks for this project can be found <a href="https://github.com/AnalysisWithAndrea/Stack-Overflow-Developer-Survey-Analysis"target="_blank">here</a>.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
