--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="pictures/twitter.png" alt="">
+            <img class="img-fluid" src="pictures/airbnb.png" alt="">
           </div>
         </div>
 
@@ -135,7 +135,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="pictures/chicago.png" alt="">
+            <img class="img-fluid" src="pictures/crypto.png" alt="">
           </div>
         </div>
 
@@ -147,7 +147,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="pictures/stackoverflowlogo.png" alt="">
+            <img class="img-fluid" src="pictures/stackoverflow.png" alt="">
           </div>
         </div>
 
