--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="pictures/crypto.png" alt="">
+            <img class="img-fluid" src="pictures/cryptos.png" alt="">
           </div>
         </div>
 
