--- a/index.html
+++ b/index.html
@@ -368,12 +368,12 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Twitter Movie Success Predictor</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Airbnb Data Analysis</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
                   <div class="divider-custom-icon">
-                    <i class="fab fa-fw fa-twitter"></i>
+                    <i class="fa fa-home"></i>
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
@@ -414,12 +414,12 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Ride-Hailing Service Analysis</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Cryptocurrencies Financial Analysis</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
                   <div class="divider-custom-icon">
-                    <i class="fas fa-car"></i>
+                    <i class="fas fa-dollar-sign"></i>
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
