--- a/index.html
+++ b/index.html
@@ -382,11 +382,13 @@
                   <img class="img-fluid rounded mb-5" src="pictures/twitter3.png" alt="">
                   
                 <!-- Portfolio Modal - Text -->
-               <p class="mb-5"> In this project I compiled a small database of movie data from the past 4 years and ran it through a script which searches for the total number of tweets, retweets, likes, and average sentiment of the tweets regarding each of the movies.
-                   <br><br>Afterwards, with data on each movie, I use serveral machine learning models to predict the box office success based off of the trends in the tweet analytics.
+               <p class="mb-5"> In this project I downloaded the dataset, used SQL queries to clean and explore the data
+                   <br><br>Afterwards, I used Tableau to create a dashboard with 5 visualizations and 4 KPIs.
                   <br><br>
-                  You can view the Jupyter Notebooks on Github
-                  <a href="https://github.com/thomastale/twitter-movie-success-predictor"target="_blank">here</a>.
+
+                  You can view the Tableau dashboard 
+                  <a href="https://public.tableau.com/app/profile/andrea.bernal/viz/airbnb_16505703431140/Dashboard1?publish=yes"target="_blank">here</a>. 
+                  Full analysis can be found on <a href="https://github.com/AnalysisWithAndrea/Airbnb-Data-Analysis">GitHub</a>.
                     </p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
