--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="pictures/dashboard1.jpg" alt="">
-                 <img class="img-fluid rounded mb-5" src="pictures/dashboard2.jpg" alt=""> 
+                <img class="img-fluid rounded mb-5" src="pictures/dashboard1.JPG" alt="">
+                 <img class="img-fluid rounded mb-5" src="pictures/dashboard2.JPG" alt=""> 
                   
                 <!-- Portfolio Modal - Text -->
                <p class="mb-5"> In this project I downloaded the dataset, used SQL queries to clean and explore the data
