--- a/index.html
+++ b/index.html
@@ -186,12 +186,12 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-5 ml-auto">
-          <p class="lead">Hi guys! I'm Thomas, an aspiring data scientist, mechanical engineering graduate, and digital content creator. 
-            <br><br>I also enjoy fantasy novels, fried chicken, outdoor activities, and standup-comedy (please feel free to send me some recommendations!). </p>
+          <p class="lead">Hi there! I'm Andrea, a data analyst and math graduate from the University of Texas at Austin
+            <br><br>I also enjoy outdoor activities,  art galleries, and cooking (please feel free to share some of your favorite recipies!)</p>
+
         </div>
         <div class="col-lg-5 mr-auto">
-          <p class="lead">Along with my other interests, I love finding out why people make the decisions they make. With this knowledge, I can better solve problems and enhance the human experience. Analyzing data, gleaning insights, and making predictions is the best way I've found to do this. </p>
-        </div>
+<p class="lead">Along with my other interests, I love finding out why things are the way they are. With this knowledge, I can better solve problems and enhance the human experience. Analyzing data, gleaning insights, and making predictions is the best way I've found to do this. </p>        </div>
       </div>
 
 
