--- a/index.html
+++ b/index.html
@@ -426,11 +426,13 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="pictures/chicago_graph2.png" alt="">
+                <img class="img-fluid rounded mb-5" src="pictures/movinng-averages.jpg" alt="">
+                <img class="img-fluid rounded mb-5" src="pictures/daily-return-hist.jpg" alt="">
+                <img class="img-fluid rounded mb-5" src="pictures/risk.jpg" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5"> In this project I take open data from released from the City of Chicago and format it for use in Tableau. This interactive visualization shows the peak times of the day that ride-hailing services are used, as well as locations where rides are called throughout the day.
-                  <br><br> You can view the full Dashboard on Tableau Public
-                  <a href="https://public.tableau.com/profile/thomas4018#!/vizhome/MostPopularTimePlacetoCallaRideinChicago/Dashboard13"target="_blank"> here</a> and the code on Github<a href="https://github.com/thomastale/Chicago-Ride-Analysis-Tableau"target="_blank"> here</a>.
+                <p class="mb-5"> In this project I downloaded Doge, Bitcoin, Ethereum, and Caradano data from Yahoo Finance and used python libraries like pandas, matplotlib, and seaborn to clean, explore, and visualize the data. I calculated the risk vs. expected return for each coin as well as other technical indiactors.  
+                  <br><br> You can view the full analysis on GitHub
+                  <a href="https://github.com/AnalysisWithAndrea/Cryptocurrency-Analysis"> here</a>.
                     
                     </p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
