--- a/index.html
+++ b/index.html
@@ -426,9 +426,9 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="pictures/movinng-averages.jpg" alt="">
-                <img class="img-fluid rounded mb-5" src="pictures/daily-return-hist.jpg" alt="">
-                <img class="img-fluid rounded mb-5" src="pictures/risk.jpg" alt="">
+                <img class="img-fluid rounded mb-5" src="pictures/moving-averages.JPG" alt="">
+                <img class="img-fluid rounded mb-5" src="pictures/daily-return-hist.JPG" alt="">
+                <img class="img-fluid rounded mb-5" src="pictures/risk.JPG" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5"> In this project I downloaded Doge, Bitcoin, Ethereum, and Caradano data from Yahoo Finance and used python libraries like pandas, matplotlib, and seaborn to clean, explore, and visualize the data. I calculated the risk vs. expected return for each coin as well as other technical indiactors.  
                   <br><br> You can view the full analysis on GitHub
