--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <div class="p-2"> </div>
             <div class="lead">andrea.b1244@gmail.com</div>
             <div class="p-2"> </div>
-            <div class="lead"><a href="https://analysiswithandrea.github.io/RESUME.pdf"target="_blank"> My Resume</a></div>
+            <div class="lead"><a href="https://analysiswithandrea.github.io/resume.pdf"target="_blank"> My Resume</a></div>
         </div>
         </div>
         <!-- Contact Section Form END -->  
