--- a/index.html
+++ b/index.html
@@ -186,12 +186,12 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-5 ml-auto">
-          <p class="lead">Hi there! I'm Andrea, a data analyst and math graduate from the University of Texas at Austin
-            <br><br>I also enjoy outdoor activities,  art galleries, and cooking (please feel free to share some of your favorite recipies!)</p>
+          <p class="lead">Hi there! I'm Andrea, a data analyst and mathematics graduate from the University of Texas at Austin
+            <br><br>I also enjoy outdoor activities,  art galleries, cooking, and traveling </p>
 
         </div>
         <div class="col-lg-5 mr-auto">
-<p class="lead">Along with my other interests, I love finding out why things are the way they are. With this knowledge, I can better solve problems and enhance the human experience. Analyzing data, gleaning insights, and making predictions is the best way I've found to do this. </p>        </div>
+<p class="lead">Along with my other interests, I love finding out why things are the way they are. </p>        </div>
       </div>
 
 
