--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
         </div>
         <div class="col-lg-5 mr-auto">
-<p class="lead">Along with my other interests, I love finding out why things are the way they are. </p>        </div>
+<p class="lead">Along with my other interests, I love finding out why things are the way they are. I specialize in Python, SQL, and data viz tools such as Tableau and IBM Cognos. </p>        </div>
       </div>
 
 
