--- a/index.html
+++ b/index.html
@@ -378,16 +378,16 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="pictures/dashboard1.JPG" alt="">
-                 <img class="img-fluid rounded mb-5" src="pictures/dashboard2.JPG" alt=""> 
+                <img class="img-fluid rounded mb-5" src="pictures/dashboard1.1.JPG" alt="">
+                 <img class="img-fluid rounded mb-5" src="pictures/dashboard2.1.JPG" alt=""> 
                   
                 <!-- Portfolio Modal - Text -->
                <p class="mb-5"> In this project I downloaded the dataset, used SQL queries to clean and explore the data
-                   <br><br>Afterwards, I used Tableau to create a dashboard with 5 visualizations and 4 KPIs.
+                   <br><br>Afterwards, I used Tableau to create a visually appealing and interactive dashboard with 5 KPIs and 5 visualizations using Calculated Fields, Dual-Axis Maps, and Filters.
                   <br><br>
 
                   You can view the Tableau dashboard 
-                  <a href="https://public.tableau.com/app/profile/andrea.bernal/viz/airbnb_16505703431140/Dashboard1?publish=yes"target="_blank">here</a>. 
+                  <a href="https://public.tableau.com/app/profile/andrea.bernal/viz/AustinAirbnbAnalysis/Dashboard1?publish=yes"target="_blank">here</a>. 
                   Full analysis can be found on <a href="https://github.com/AnalysisWithAndrea/Airbnb-Data-Analysis">GitHub</a>.
                     </p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
